# Distributed_NeuralNet_C-

./: .gitignore  CMakeLists.txt  README.md
DNN/: main.cpp
DNN/Algorithm/: alg.cpp  alg.h
DNN/Data_Operations/: DataOps.cpp  DataOps.h  DataPreprocess.cpp  MatrixOps.cpp  MatrixOps.h
DNN/Essential_Methods/Data_Operations/: DataOps.h  MatrixOps.cpp
DNN/Essential_Methods/Image_Operations/: ImgOps.cpp  ImgOps.h
DNN/Essential_Methods/Propagations/: Propagation.cpp  Propagation.h
DNN/Essential_Params/: Params.h
DNN/HyperParams/: HyperParams.cpp  HyperParams.h  MemManager.cpp  MemManager.h
DNN/HyperParams/Cache_Managers/: CacheManagr.cpp  CacheMangr.h
DNN/HyperParams/HyperParameters/: HyperParams.cpp  HyperParams.h
DNN/HyperParams/Lifetime_Managers/: MemManager.cpp  MemManager.h
DNN/Image_Operations/: ImgOps.cpp  ImgOps.h
DNN/NET_CONSTRUCT/: net_construct.cpp  net_construct.h
DNN/Propagations/: Propagation.cpp  Propagation.h
DNN/alg/: alg.cpp  alg.h
DNN/cache/Cache_Managers/: CacheManagr.cpp  CacheMangr.h
DNN/cache/HyperParameters/: HyperParams.cpp  HyperParams.h
DNN/menu/: menu.cpp  menu.h  net_construct.cpp  net_construct.h
DNN/types/: types.h
DNN_/: main.cpp
DNN_/NET_CONSTRUCT/: net_construct.h
DNN_/Propagations/: Propagation.h
DNN_Server_Components/: Server.cpp
Logging_Functions/: animation.h
Tutorial_Folder/Math/: tutorial.cpp
Tutorial_Folder/Other/: game.cpp  game.h  logger.cpp  logger.h  text.c++
Tutorial_Folder/User_Records/: User.cpp
logging/: animation.cpp  animation.h
server_op/: Server.h
(+31 files in other folders)
